--- a/Conditional/WhatIsConditionalEffects.tex
+++ b/Conditional/WhatIsConditionalEffects.tex
@@ -18,7 +18,7 @@ Instead of relying solely on action arguments, each effect in a conditional acti
     \underbrace{\left[ q(x, y), \dots \right]}_{\textit{effects}} \quad when \quad 
     \underbrace{\left[ g(z, x), \dots  \right]}_{\textit{preconditions}}
 \end{equation*}
-For any interpretation of the variables $\varC\left(\cond\right)$ (i.e. a mapping from $\varC\left(\cond\right)$ to $\objs$), the \textit{effects} are only applied if the \textit{preconditions} are satisfied under that interpretation. 
+For any interpretation of the variables $\varC\left(\cond\right)$ (i.e.\ a mapping from $\varC\left(\cond\right)$ to $\objs$), the \textit{effects} are only applied if the \textit{preconditions} are satisfied under that interpretation. 
 \end{definition}
 
 Note that --- in this sense --- a conditional is similar to a non-conditional action with as many parameters as there are objects in the world. 
