--- a/Discussion/SpaceComplexity.tex
+++ b/Discussion/SpaceComplexity.tex
@@ -18,7 +18,7 @@ We realise that it might still be interesting what the exact space complexity of
  \end{align*} 
  where $k$ is the maximum arity of predicates, and m is maximum arity of the action.
  \begin{proof} 
- 	As \litsa is the maximum number of literals in an actions effect/precondition. Then
+ 	As \litsa is all possible literals in an action's effects/preconditions. Then
  	it follows that the maximum cardinality of effects or preconditions must therefore be $O(|\litsa|)$.
 Since $\Up_{E/P}$ initially contains all possible effects or preconditions (depending on the use-case), 
 	it then follows that $\Up_{E/P}$ must have the cardinality $O(|\litsa|)$. 
